--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html
+  lang="uk"
+  xml:lang="uk"
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:v="urn:schemas-microsoft-com:vml"
+  xmlns:o="urn:schemas-microsoft-com:office:office"
+>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-EN-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="x-apple-disable-message-reformatting" />
     <meta
       name="format-detection"
@@ -21,6 +27,14 @@
       - Максимальна ширина контенту 600px. Всі layout тільки на <table>.
       - Більшість стилів інлайном; спільні — класами нижче (підтримуються більшістю клієнтів).
   -->
+    <!--[if mso]>
+      <xml>
+        <o:OfficeDocumentSettings>
+          <o:AllowPNG />
+          <o:PixelsPerInch>96</o:PixelsPerInch>
+        </o:OfficeDocumentSettings>
+      </xml>
+    <![endif]-->
     <style type="text/css">
       /* RESET */
       html,
@@ -48,6 +62,13 @@
       }
       a {
         text-decoration: none;
+      }
+      p,
+      h1,
+      h2,
+      h3,
+      a {
+        mso-line-height-rule: exactly;
       }
       /* Outlook */
       .ExternalClass {
@@ -178,6 +199,7 @@
   <body
     id="body"
     class="bg"
+    bgcolor="#f6f6f9"
     style="margin: 0; padding: 0; background-color: #f6f6f9"
   >
     <!-- Preview / Preheader (прихований) -->
@@ -232,7 +254,7 @@
                         src="https://s6.imgcdn.dev/YytUqq.jpg"
                         width="120"
                         height="32"
-                        alt="Brand"
+                        alt=""
                         class="light-only"
                         style="display: block; height: auto"
                       />
@@ -241,7 +263,7 @@
                         src="https://s6.imgcdn.dev/YytUqq.jpg"
                         width="120"
                         height="32"
-                        alt="Brand"
+                        alt=""
                         class="dark-only"
                         style="display: none; height: auto"
                       />
@@ -270,7 +292,7 @@
                   style="width: 100%; height: auto"
                   width="600"
                   height="240"
-                  alt="Hero"
+                  alt=""
                 />
               </td>
             </tr>
