--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html
-  lang="uk"
-  xml:lang="uk"
+  lang="en"
+  xml:lang="en"
   xmlns="http://www.w3.org/1999/xhtml"
   xmlns:v="urn:schemas-microsoft-com:vml"
   xmlns:o="urn:schemas-microsoft-com:office:office"
@@ -9,7 +9,6 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="x-apple-disable-message-reformatting" />
     <meta
       name="format-detection"
@@ -17,16 +16,8 @@
     />
     <meta name="color-scheme" content="light dark" />
     <meta name="supported-color-schemes" content="light dark" />
+    <meta http-equiv="Content-Language" content="en" />
     <title>EMAIL TEMPLATE</title>
-    <!--
-    БАЗОВИЙ ШАБЛОН HTML EMAIL 600px
-    скелет з корисними патернами
-    Поради:
-      - Тримай HTML < 102KB, інакше Gmail може обрізати.
-      - Картинки ретина (2x), з width/height атрибутами і style="height:auto".
-      - Максимальна ширина контенту 600px. Всі layout тільки на <table>.
-      - Більшість стилів інлайном; спільні — класами нижче (підтримуються більшістю клієнтів).
-  -->
     <!--[if mso]>
       <xml>
         <o:OfficeDocumentSettings>
